# sv2m

./: .gitignore  pyproject.toml
recipes/MGSV-EC/: README_visualization.md  evaluate.sh  evaluate_visualize.sh  evaluate_with_visualization.py  local  test_visualization.py  train.sh  visualization.py
recipes/_common/local/: evaluate.py  train.py
sv2m/: __init__.py
sv2m/amp/: __init__.py
sv2m/config/: parse_run_command.yaml
sv2m/config/dataloader/: mgsvec.yaml
sv2m/config/optimizer/: made.yaml
sv2m/config/train/: made_mgsvec.yaml
sv2m/configs/: config.yaml
sv2m/configs/dataloader/: default.yaml  mgsvec.yaml  mgsvec_8gpu.yaml  mgsvec_crop.yaml  mgsvec_crop_no_crop.yaml
sv2m/configs/evaluate/: default.yaml  made.yaml
sv2m/configs/model/: add_kl_all.yaml  add_kl_negative.yaml  baseline.yaml  li_logsumexp.yaml  li_max.yaml  li_topk.yaml  made.yaml  made_lateint_logsumexp.yaml  made_lateint_max.yaml  made_lateint_topk.yaml  made_li.yaml  made_mean.yaml  made_oracle_both.yaml  made_oracle_mean.yaml  made_oracle_xpool.yaml  made_xpool.yaml  mean.yaml  mvpt.yaml  oracle_both.yaml  oracle_mean.yaml  oracle_xpool.yaml  xpool.yaml
sv2m/configs/optimizer/: made.yaml
sv2m/configs/train/: default.yaml  made_mgsvec.yaml
sv2m/criterion/: __init__.py  contrastive.py  distributed.py  distribution.py  localization.py  retrieval.py
sv2m/distributed/: __init__.py
sv2m/models/: __init__.py
sv2m/models/made/: __init__.py  (+1 more)
sv2m/modules/: aggregater.py  gelu.py  head.py  mlp.py  patch_embedding.py  positional_encoding.py  transformer.py
sv2m/utils/: __init__.py
(+16 files in other folders)
